# ATOMIC

./: .clang-format  .gitignore  CLI.c  CLI.h  CMakeLists.txt  Commons.h  Compiler.c  Compiler.h  Errors.c  Errors.h  FLAGS.h  FLAGSTEMP.h  FLAG_PRE.c  FLAG_PRE.h  FLAG_Shared.h  Flags.c  Flags.h  InternalSettings.c  InternalSettings.h  LexErrors.h  Lexer.c  Lexer.h  LexerTwo.c  LexerTwo.h  Node.c  Node.h  Parser.c  Parser.h  README.md  Roadmap.md  SysDesign.md  Tokens.c  Tokens.h  atom.atm  byte-code.abc  c.h  hadron.h  helper.h  license  main.c  (+4 more)
235/: Kall.c  Kall.h  VM.c  VM.h
Depricated/: FLAG_PRE.c  FLAG_PRE.h  Lexer.c  Lexer.h
FLAG-PREPROCESSOR/: FLAG_PRE.c  FLAG_PRE.h  FlagPreprocessor.c  FlagPreprocessorInject.h  FlagPreprocessorInternal.h  Flag_Preprocessor.c  Flag_Preprocessor.h  flags
FlagPreprocessor/: FlagPreprocessor.c  FlagPreprocessorInject.h  flags
Generator/: Generator.c  Generator.h  GeneratorInternal.h
Info/: ABC.md  CarrotExample.atm  ErrorHandling.atm  ExampleProgram.atom  Formalised Grammar.bnf  NestedFunctions.atm  SimpleExample.atm  SubLangs.md  Syscalls.md  TODO.txt  coerc.atm  dynamicLink.md  mark2.txt  marked.atm  marked.txt  structs.atm
Lexer/: LexErrors.h  Lexer.c  Lexer.h  Lexerr.c  Lexerr.h  OpFolder.c  OpFolder.h  Tokens.c  Tokens.h  Tokerr.c  Tokerr.h
Parser/: Node.c  Node.h  ParsErrors.h  Parser.c  Parser.h  Parserr.c  Parserr.h  ShuntingYard.c  ShuntingYard.h  StaticVerification.c  StaticVerification.h  StaticVerificationInternal.h  TypeConstInfo.h  types
Parser2/: Node.c  Node.h  Parser.c  Parser.h  Parserr.c  Parserr.h
SharedIncludes/: Array.c  Array.h  Buffer.c  Buffer.h  Colours.h  FLAG_Shared.h  Flag_shared.c  Flag_shared.h  Helper_File.c  Helper_File.h  Helper_Math.c  Helper_Math.h  Helper_String.c  Helper_String.h  Messages.c  Messages.h  Queue.c  Queue.h  Stack.c  Stack.h  Vector.c  Vector.h  helper.h
Test/: Test.c
Testing/: TypeMatrix.c  TypeMatrix.h
TypePreprocessor/: TPPGenerator.c  TPPGenerator.h  TPPGeneratorInternal.h  TPPLexer.c  TPPLexer.h  TPPLexerInternal.h  TPPParser.c  TPPParser.h  TPPParserInternal.h  TypePreprocessor.c  TypePreprocessor.h  TypePreprocessorInternal.h  enum-out.h  enum-temp.c  matrix-out.c  types.atf  types.txt
TypePreprocessor/output/: TPPHeader.h  enum-out.h  enum-temp.c  matrix-out.c  shared_types.h
cmake/: hadron.cmake
hadron/: hadron.c  hadron_internal.h
libraries/: hadron.h
test/: Test.c
